src/test/deca/syntax/parser/invalid/decl_var_expr_ident_symbole_point.deca
// Parser test, identifier unavailable, special character

{
    int . = 5;
}